home-k8s-cluster/workloads/k8s-prod/manifests/kube-prometheus/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: home-ips-only
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.1.2
