home-k8s-cluster/workloads/k8s-prod/manifests/kube-prometheus/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress-https
  labels:
    name: grafana-ingress-https
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - grafana.home.maxanderson.tech
      secretName: grafana-tls
  rules:
    - host: grafana.home.maxanderson.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress-http
  labels:
    name: grafana-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-https-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: grafana.home.maxanderson.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
