home-k8s-cluster/workloads/k8s-prod/manifests/kube-prometheus/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress-https
  labels:
    name: prometheus-ingress-https
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-home-ips-only@kubernetescrd
spec:
  tls:
    - hosts:
        - prometheus.home.maxanderson.tech
      secretName: prometheus-tls
  rules:
    - host: prometheus.home.maxanderson.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress-http
  labels:
    name: prometheus-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-home-ips-only@kubernetescrd,monitoring-https-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: prometheus.home.maxanderson.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
